# Alur

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  IDEMPOTENCY_E2E_TEST_RESULTS.md  INGESTION_SUMMARY.md  LICENSE  LOCAL_TESTING.md  PHASE1_IMPROVEMENTS.md  PUBLISHING.md  QUALITY_SUMMARY.md  README.md  RELEASE_WORKFLOW.md  RELEASE_v0.5.0.md  SPECS.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_idempotency.md
.github/workflows/: publish-docs.yml  publish-pypi-manual.yml  publish-pypi.yml
AWS_DEPLOYMENT_GUIDE/: index.html
BRONZE_INGESTION/: index.html
DATA_QUALITY/: index.html
DEPLOY/: index.html
SCHEDULING/: index.html
docs/: AWS_DEPLOYMENT_GUIDE.md  BRONZE_INGESTION.md  DATA_QUALITY.md  DEPLOY.md  README.md  SCHEDULING.md  index.md
examples/: bronze_ingestion_examples.py
scripts/: README.md  bump_version.py  release.bat  release.sh
search/: search_index.json
src/alur/: __init__.py  batch_ingestion.py  cli.py
src/alur/core/: __init__.py  contracts.py  fields.py
src/alur/decorators/: __init__.py
src/alur/engine/: __init__.py  adapter.py  runner.py  spark.py
src/alur/infra/: __init__.py  generator.py
src/alur/ingestion/: __init__.py
src/alur/quality/: __init__.py
src/alur/scheduling/: __init__.py  validators.py
src/alur/sources/: __init__.py  postgres.py
src/alur/templates/aws/: driver.py
src/alur/templates/project/: README.md  main.py  pyproject.toml
src/alur/templates/project/config/: settings.py
src/alur/templates/project/contracts/: __init__.py  bronze.py  silver.py
src/alur/templates/project/pipelines/: __init__.py  ingest_orders.py  orders.py
tests/: README.md  __init__.py  __main__.py  conftest.py  test_aws_end_to_end_bronze.py  test_batch_ingestion_integration.py  test_batch_schema_validation.py  test_idempotency_unit.py  test_scheduling.py  test_unimplemented_params.py
