[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alur-framework"
version = "0.1.0"
description = "AWS-first data lake framework with zero idle costs. Build pipelines with Iceberg and serverless Spark."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alur Framework Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml",
    "jinja2",
    "boto3",
    "networkx",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.3.0",
]
local = [
    "pyspark>=3.3.0",
]
all = [
    "pyspark>=3.3.0",
]
dev = [
    "pyspark>=3.3.0",
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
alur = "alur.cli:main"

[project.urls]
Homepage = "https://github.com/alur-framework/alur-framework"
Documentation = "https://github.com/alur-framework/alur-framework"
Repository = "https://github.com/alur-framework/alur-framework"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
alur = ["templates/**/*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
