[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alur-framework"
version = "0.3.0"
description = "Cost-effective data lake framework designed for small and mid-size companies. Build production-grade data pipelines on AWS with zero idle costs using serverless Spark and Apache Iceberg."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alur Framework Contributors"}
]
keywords = [
    "data-lake",
    "data-engineering",
    "etl",
    "aws",
    "spark",
    "iceberg",
    "serverless",
    "glue",
    "data-pipeline",
    "small-business",
    "mid-size-company"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml",
    "jinja2",
    "boto3",
    "networkx",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.3.0",
]
all = [
    "pyspark>=3.3.0",
]
dev = [
    "pyspark>=3.3.0",
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
alur = "alur.cli:main"

[project.urls]
Homepage = "https://github.com/ParmenidesSartre/Alur"
Documentation = "https://github.com/ParmenidesSartre/Alur/blob/main/README.md"
Repository = "https://github.com/ParmenidesSartre/Alur"
Issues = "https://github.com/ParmenidesSartre/Alur/issues"
Changelog = "https://github.com/ParmenidesSartre/Alur/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
alur = ["templates/**/*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
