[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PROJECT_NAME"
version = "0.1.0"
description = "Alur data lake project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "alur",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["contracts*", "pipelines*", "config*"]
